--- a/MasterMind/Views/Shared/_LayoutPadrao.cshtml
+++ b/MasterMind/Views/Shared/_LayoutPadrao.cshtml
@@ -9,7 +9,7 @@
     <title>@ViewBag.Title</title>
 </head>
 <body>
-    <script src="~/Scripts/BO/additional-methods.min-1.11.1.js"></script>
+    @*<script src="~/Scripts/BO/additional-methods.min-1.11.1.js"></script>*@
     <script src="~/Scripts/BO/jquery-1.9.1.min.js"></script>
     <script src="~/Scripts/BO/jquery.validate.min-1.11.1.js"></script>
     <script src="~/Scripts/BO/jquery.validate.unobtrusive.min.js"></script>
