--- a/MasterMind/Views/Shared/_LayoutTabuleiro.cshtml
+++ b/MasterMind/Views/Shared/_LayoutTabuleiro.cshtml
@@ -11,7 +11,7 @@
 
 </head>
 <body>
-    <script src="~/Scripts/BO/additional-methods.min-1.11.1.js"></script>
+    @*<script src="~/Scripts/BO/additional-methods.min-1.11.1.js"></script>*@
     @*    <script src="~/Scripts/BO/jquery-1.9.1.min.js"></script>*@
     <script src="~/Scripts/jquery-1.10.2.min.js"></script>
     <script src="~/Scripts/BO/jquery.validate.min-1.11.1.js"></script>
