--- a/MasterMind/Views/Shared/_LayoutTabuleiro.cshtml
+++ b/MasterMind/Views/Shared/_LayoutTabuleiro.cshtml
@@ -44,8 +44,7 @@
                         @*<div class="float-right">*@
                         <div class="nav-collapse collapse opcoes">
                             <ul class="nav">
-                                <li><a href="@Url.Action("Prototipo", "Game")">Prototipo</a></li>
-                                <li><a href="@Url.Action("Login", "Account")">Abandonar Jogo</a></li>
+                                <li><a href="@Url.Action("List", "Salas")">Abandonar Jogo</a></li>
                             </ul>
                             <div class="usuario-logado">
                                 @nomeUsuario
