--- a/MasterMind/Views/Account/Login_2.cshtml
+++ b/MasterMind/Views/Account/Login_2.cshtml
@@ -4,30 +4,35 @@
     ViewBag.Title = "Login";
     Html.EnableClientValidation(true);
 }
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>@ViewBag.Title</title>
-</head>
-<body id="login_2">
-    <link href="~/Styles/Logins.css" rel="stylesheet" />
-    <link href="~/Styles/bootstrap-responsive.min.css" rel="stylesheet" />
-    <link href="~/Styles/bootstrap.min.css" rel="stylesheet" />
 
-    <header>
-        <div id="header_login_2"></div>
-    </header>
-
-    @using (Html.BeginForm(new { ReturnUrl = ViewBag.ReturnUrl }))
+@using (Html.BeginForm(new { ReturnUrl = ViewBag.ReturnUrl }))
     { 
-        @Html.AntiForgeryToken() 
-        @Html.ValidationSummary(true) 
+    @Html.AntiForgeryToken() 
+    @Html.ValidationSummary(true) 
+          Styles.Render("~/Content/css") ;
+          Scripts.Render("~/bundles/modernizr");  
+    <html>
+    <head>
+        <meta name="viewport" content="width=device-width" />
+        <title>@ViewBag.Title</title>
+    </head>
+    <body id="login_2">
+
+        <link href="~/Styles/Logins.css" rel="stylesheet" />
+        <link href="~/Styles/bootstrap-responsive.min.css" rel="stylesheet" />
+        <link href="~/Styles/bootstrap.min.css" rel="stylesheet" />
+
+        <header>
+            <div id="header_login_2"></div>
+        </header>
+
+
         <section id="loginForm">
             <div>
                 <table>
                     <tr>
                         <td style="width: 33%"></td>
-                        <td style="width: 66%;text-align:left;">
+                        <td style="width: 66%; text-align: left;">
                             <img src="~/Images/logo_login_2.png" />
                         </td>
                         <td></td>
@@ -36,7 +41,7 @@
                         <td></td>
                         <td id="td_left">
                             @Html.LabelFor(m => m.email)
-                            @Html.TextBoxFor(m => m.email)
+                            @Html.TextBoxFor(m => m.email, new { @class = "txtMedium" })
                             @Html.ValidationMessageFor(m => m.email)
                         </td>
 
@@ -45,10 +50,10 @@
                     <tr>
                         <td></td>
                         <td id="td_left">
-                            <div style="margin-left:10%">                                
-                            @Html.LabelFor(m => m.Senha)
-                            @Html.PasswordFor(m => m.Senha)
-                            @Html.ValidationMessageFor(m => m.Senha)
+                            <div style="margin-left: 10%">
+                                @Html.LabelFor(m => m.Senha)
+                                @Html.PasswordFor(m => m.Senha, new { @class = "txtMedium" })
+                                @Html.ValidationMessageFor(m => m.Senha)
                             </div>
 
                         </td>
@@ -57,7 +62,7 @@
                     <tr>
                         <td></td>
                         <td id="td_left">
-                            <input type="submit" value="Acessar" style="height:40px; width:100px" />&nbsp;&nbsp;&nbsp; @Html.ActionLink("Registre-se", "Register")  se você não possui uma conta.
+                            <input type="submit" value="Acessar" style="height: 40px; width: 100px" />&nbsp;&nbsp;&nbsp; @Html.ActionLink("Registre-se", "Register")  se você não possui uma conta.
                         </td>
                         <td></td>
                     </tr>
@@ -65,8 +70,9 @@
 
             </div>
         </section>
+        
+    </body>
+    </html>
     }
-</body>
-</html>
 
 
