--- a/MasterMind/Views/Account/Login_3.cshtml
+++ b/MasterMind/Views/Account/Login_3.cshtml
@@ -33,7 +33,7 @@
                                 <tr style="padding: 0">
                                     <td id="td_left">
                                         @Html.LabelFor(m => m.email)
-                                        @Html.TextBoxFor(m => m.email)
+                                        @Html.TextBoxFor(m => m.email, new { @class = "txtMedium" })
                                         @Html.ValidationMessageFor(m => m.email)
                                     </td>
                                 </tr>
@@ -41,7 +41,7 @@
                                     <td id="td_left">
                                         <div>
                                             @Html.LabelFor(m => m.Senha)
-                                            @Html.PasswordFor(m => m.Senha)
+                                            @Html.PasswordFor(m => m.Senha, new { @class = "txtMedium" })
                                             @Html.ValidationMessageFor(m => m.Senha)
                                         </div>
                                     </td>
