--- a/MasterMind/Views/Shared/Principal.Master
+++ b/MasterMind/Views/Shared/Principal.Master
@@ -49,7 +49,8 @@
     </header>
     <div style="width: 100%; border: 1px solid black; float: left;">
         <div id="divEsquerda" style="width: 200px; height: 1000px; margin-left: 5px; float: left;">
-            <% Html.RenderAction("partialPerfil", "Usuario"); %>
+         <%  Boolean nomeUsuario = String.IsNullOrEmpty(Context.User.Identity.Name) ? false : true; %>
+            <% if (nomeUsuario) Html.RenderAction("partialPerfil", "Usuario"); %>
             <div>
                 <table>
                     <tr>
@@ -128,7 +129,7 @@
             <asp:ContentPlaceHolder ID="PrincipalMiddle" runat="server">
             </asp:ContentPlaceHolder>
         </div>
-        <div id="divDireita" style="width: 140px; height: 1000px; float: right; margin-right: 10px; border-bottom: 1px solid black; border-top: 1px solid black; border-left: 1px solid black; padding-left: 10px;">
+        <div id="divDireita" style="width: 140px; height: 1000px; float: right; margin-right: 10px; border-bottom: 1px solid black; border-top: 1px solid black;   padding-left: 10px;">
             <% Html.RenderAction("Ranking_top", "Game"); %>
         </div>
     </div>
