--- a/MasterMind/Views/Game/Partida.cshtml
+++ b/MasterMind/Views/Game/Partida.cshtml
@@ -21,13 +21,19 @@
 <script src="@Url.Content("~/Scripts/Game/tabuleiro.js")"></script>
 
 <div>
-    @Html.Hidden("hddId_Sala", sala.Id_Sala, new  { id = "hddId_Sala"} );
+    @Html.Hidden("hddId_Sala", sala.Id_Sala, new { id = "hddId_Sala" });
 </div>
 
 <div id="divPergunta">
     <div id="divPersonagem">
-@*        <img src="@Url.Content(jogador.Usuario.Personagem.Imagem)" width="70" height="70"/>*@
-          <img src="@Url.Content("~/Images/cartoon.jpg")"/>
+        @if ((jogador.Usuario.Personagem != null) && (jogador.Usuario.Personagem.Imagem != null))
+        {
+            <img src="@Url.Content(jogador.Usuario.Personagem.Imagem)" width="70" height="70"/>
+        }
+        else
+        {
+            <img src="~/Images/usu.png" width="70" height="70" />
+        }
     </div>
 
     <div id="divGame-Over">
@@ -38,68 +44,75 @@
         <h3>@pergunta.Txt_Perg</h3>
     </div>
 
-    <div style="clear:both;"></div>
+    <div style="clear: both;"></div>
 
     <div id="divAlternativas">
 
         <div class="alternativas">
             @*Respotas*@
             @*Resposta 1*@
-@{
-    if (jogador.Usuario.Id_user != jogadaDaVez.Usuario.Id_user)
-    {
-        classeAlternativa = "";
-        if (pergunta.Resposta1.OpcaoCerta)
-        {
-            classeAlternativaCerta1 = "alternativa-certa";
-        }
-        else if (pergunta.Resposta2.OpcaoCerta)
-        {
-            classeAlternativaCerta2 = "alternativa-certa";
-        }
-        else if (pergunta.Resposta3.OpcaoCerta)
-        {
-            classeAlternativaCerta3 = "alternativa-certa";
-        }
-    }
-}
+            @{
+                if (jogador.Usuario.Id_user != jogadaDaVez.Usuario.Id_user)
+                {
+                    classeAlternativa = "";
+                    if (pergunta.Resposta1.OpcaoCerta)
+                    {
+                        classeAlternativaCerta1 = "alternativa-certa";
+                    }
+                    else if (pergunta.Resposta2.OpcaoCerta)
+                    {
+                        classeAlternativaCerta2 = "alternativa-certa";
+                    }
+                    else if (pergunta.Resposta3.OpcaoCerta)
+                    {
+                        classeAlternativaCerta3 = "alternativa-certa";
+                    }
+                }
+            }
 
             <div class="editor-label @classeAlternativa @classeAlternativaCerta1" >
-                <label>A - </label>@if(jogador.Usuario.Id_user == jogadaDaVez.Usuario.Id_user){ @Html.RadioButton("MinhaResposta", pergunta.Resposta1.Id_resp, false)}
+                <label>A - </label>
+                @if (jogador.Usuario.Id_user == jogadaDaVez.Usuario.Id_user)
+                { @Html.RadioButton("MinhaResposta", pergunta.Resposta1.Id_resp, false)}
                 <label>@pergunta.Resposta1.Resp_txt</label>
             </div>
 
             @*Resposta 2*@
             <div class="editor-label @classeAlternativa @classeAlternativaCerta2" >
-                <label>B - </label>@if(jogador.Usuario.Id_user == jogadaDaVez.Usuario.Id_user){ @Html.RadioButton("MinhaResposta", pergunta.Resposta2.Id_resp, false) }
+                <label>B - </label>
+                @if (jogador.Usuario.Id_user == jogadaDaVez.Usuario.Id_user)
+                { @Html.RadioButton("MinhaResposta", pergunta.Resposta2.Id_resp, false) }
                 <label>@pergunta.Resposta2.Resp_txt</label>
             </div>
 
 
             @*Resposta 3*@
             <div class="editor-label @classeAlternativa @classeAlternativaCerta3">
-                <label>C - </label>@if(jogador.Usuario.Id_user == jogadaDaVez.Usuario.Id_user){ @Html.RadioButton("MinhaResposta", pergunta.Resposta3.Id_resp, false) }
+                <label>C - </label>
+                @if (jogador.Usuario.Id_user == jogadaDaVez.Usuario.Id_user)
+                { @Html.RadioButton("MinhaResposta", pergunta.Resposta3.Id_resp, false) }
                 <label>@pergunta.Resposta3.Resp_txt</label>
             </div>
         </div>
 
     </div>
 
-    <div style="clear:both;"></div>
+    <div style="clear: both;"></div>
 
-@if(jogador.Usuario.Id_user == jogadaDaVez.Usuario.Id_user){ 
-    <div id="divCartas" title="Responder" onclick="Responder()">
-        <img src="@Url.Content("~/Images/cartas2.png")"/>
-    </div>
+    @if (jogador.Usuario.Id_user == jogadaDaVez.Usuario.Id_user)
+    { 
+        <div id="divCartas" title="Responder" onclick="Responder()">
+            <img src="@Url.Content("~/Images/cartas2.png")"/>
+        </div>
 
-    <div id="divSeta" title="Clique nas carta para responder a pergunta">
-        <img src="@Url.Content("~/Images/seta.gif")"/>
-    </div>
+        <div id="divSeta" title="Clique nas carta para responder a pergunta">
+            <img src="@Url.Content("~/Images/seta.gif")"/>
+        </div>
 
-    <div id="divCerto" title="Resposta Correta">
-        <img src="@Url.Content("~/Images/certo.jpg")"/>
-    </div>
-}
+        <div id="divCerto" title="Resposta Correta">
+            <img src="@Url.Content("~/Images/certo.jpg")"/>
+        </div>
+    }
 
     <div id="divErrado" title="Resposta Errada">
         <img src="@Url.Content("~/Images/errado.jpg")"/>
@@ -133,34 +146,46 @@
 <div id="divParticipantes">
     <h3>Participantes</h3>
     <ul>
-    @{
-        foreach(Jogos jogo in partida)
-        {
-            classeJogadorN = "jogador" + (partida.IndexOf(jogo) + 1).ToString();
-            if (jogo == jogadaDaVez)
+        @{
+            foreach (Jogos jogo in partida)
             {
-                classeJogadaDaVez = "jogador-da-vez";
-            }
-            else
-            {
-                classeJogadaDaVez = "dados-jogador";
-            }
+                classeJogadorN = "jogador" + (partida.IndexOf(jogo) + 1).ToString();
+                if (jogo == jogadaDaVez)
+                {
+                    classeJogadaDaVez = "jogador-da-vez";
+                }
+                else
+                {
+                    classeJogadaDaVez = "dados-jogador";
+                }
             <li>
                 <div class="@classeJogadaDaVez @classeJogadorN">
-                    @*<span> <img src="@Url.Content(jogo.Usuario.Personagem.Imagem)" width="50" height="50"/> @jogo.Usuario.Nome (@jogo.Usuario.Cidade/@jogo.Usuario.Estado-@jogo.Usuario.Pais)</span>*@
-                    <span class="nome-jogador">@jogo.Usuario.Nome</span><span> (@jogo.Usuario.Cidade/@jogo.Usuario.Estado-@jogo.Usuario.Pais)</span>
+
+                    @if ((jogo.Usuario.Personagem != null) && (jogo.Usuario.Personagem.Imagem != null))
+                    {
+                        <span class="nome-jogador">
+                            <img src="@Url.Content(jogo.Usuario.Personagem.Imagem)" width="50" height="50"/>
+                            @jogo.Usuario.Nome </span><span>(@jogo.Usuario.Cidade/@jogo.Usuario.Estado-@jogo.Usuario.Pais)</span>
+                    }
+                    else
+                    {
+                        <span class="nome-jogador">
+                            <img src="~/Images/usu.png" width="50" height="50" />
+                            @jogo.Usuario.Nome </span><span>(@jogo.Usuario.Cidade/@jogo.Usuario.Estado-@jogo.Usuario.Pais)</span>
+                    }
+
                     <br />
                     <div class="tema-jogador">
                         <span>&nbsp;&nbsp;Tema: @jogo.Tema.Desc_tema</span>
                     </div>
-                    <div style="clear:both;"></div>
+                    <div style="clear: both;"></div>
                     <div class="acertos-erros-jogador">
                         <span>&nbsp;&nbsp;Acertos: @jogo.Acertos</span> <span>Erros: @jogo.Erros</span>
                     </div>
-                    <div style="clear:both;"></div>
+                    <div style="clear: both;"></div>
                 </div>
             </li>
+            }
         }
-    }
     </ul>
 </div>
