--- a/MasterMind/Views/Shared/Site.Master
+++ b/MasterMind/Views/Shared/Site.Master
@@ -9,6 +9,9 @@
     <meta name="viewport" content="width=device-width,heigth=device-heigth" />
     <%: Styles.Render("~/Content/css") %>
     <%: Scripts.Render("~/bundles/modernizr") %>
+            <link href="~/Styles/Logins.css" rel="stylesheet" />
+        <link href="~/Styles/bootstrap-responsive.min.css" rel="stylesheet" />
+        <link href="~/Styles/bootstrap.min.css" rel="stylesheet" />
 
     <style>
         .usuario-logado
