--- a/MasterMind/Views/Jogos/Sala_Espera.cshtml
+++ b/MasterMind/Views/Jogos/Sala_Espera.cshtml
@@ -26,9 +26,22 @@
         <link href="../../Styles/bootstrap.min.css" rel="stylesheet" />
         <link href="~/Styles/jogo.css" rel="stylesheet" />
         <link href="~/Styles/tabuleiro.css" rel="stylesheet" />
+        <script src="@Url.Content("~/Scripts/jquery.jquery-1.5.1.min.js")" type="text/javascript"></script>
+        <script src="@Url.Content("~/Scripts/jquery.unobtrusive-ajax.min.js")" type="text/javascript"></script>
+        <script src="@Url.Content("~/Scripts/Game/game.js")"></script>
 
     </head>
     <body>
+        <style>
+            div.out {
+                visibility: hidden;
+            }
+
+            div.in {
+                visibility: visible;
+            }
+        </style>
+
         <header>
             <div class="content-wrapper">
                 <div class="float-left">
@@ -49,7 +62,8 @@
             </div>
         </header>
 
-        @Html.HiddenFor(model => model.Id_jogo, new { @name = "id_jogo" })
+        @Html.Hidden("id_jogo", jogador.Id_jogo, new { @name = "id_jogo", @id = "id_jogo" })
+        @Html.HiddenFor(model => model.Id_jogo, new { @name = "id_jogo", @id = "id_jogo" })
 
         <link href="~/Content/Site.css" rel="stylesheet" />
         <div id="divTempo" style="text-align: center">
@@ -80,7 +94,7 @@
                         <div class="dados-jogador" title="SelectPlayer">
                             <table style="border: none">
                                 <tr style="border: none">
-                                    <td style="border: none;min-width:50px;padding-right:0px">
+                                    <td style="border: none; min-width: 50px; padding-right: 0px">
 
                                         @if ((jogo.Usuario.Personagem != null) && (jogo.Usuario.Personagem.Imagem != null))
                                         {
@@ -91,11 +105,11 @@
                                             <img src="~/Images/usu.png" width="50" height="50" />
                                         }
                                     </td>
-                                    <td style="border: none;min-width:145px;max-width:145px">
+                                    <td style="border: none; min-width: 145px; max-width: 145px">
                                         <h5>&nbsp;@jogo.Usuario.Nome </h5>
                                     </td>
                                     <td style="border: none">
-                                        <input class="btn btn-primary" type="button" value ="Info." onclick="window.location.href='@Url.Action("_AcessoPartial", "Jogos", new { Id_jogo = jogo.Id_jogo })    '"/>
+                                        <input type="button" value="Info." class="btn btn-info" onclick="window.location.href='@Url.Action("Sala_Espera", "Jogos", new { Id_Sala = jogo.Sala.Id_Sala, selecionado = jogo.Id_jogo })'" />                                                                               
                                     </td>
                                 </tr>
                             </table>
@@ -104,7 +118,11 @@
                 }
             </ul>
         </div>
-        <div id="divParcial">
+        <div id="divParcial" style="padding-top:5px">
+            @if (ViewBag.selecionado != null)
+            {
+                Html.RenderAction("_AcessoPartial", "Jogos", new { Id_jogo = ViewBag.selecionado });
+            }
         </div>
     </body>
 }
