Acerto do Tabuleiro - Acerto layout Personagem

--- a/MasterMind/Views/Game/Partida.cshtml
+++ b/MasterMind/Views/Game/Partida.cshtml
@@ -38,6 +38,9 @@
 
     <div id="divGame-Over">
         <p>Game Over</p>
+        <div style="text-align:center">
+          <br />  <input type="button" value="Sair" class="btn btn-info" onclick="window.location.href='@Url.Action("List", "Salas")'" />
+        </div>
     </div>
 
     <div id="divTextoPergunta">
