Ajuste tabuleiro - Está mudando de tema =)
Rodar script 21

--- a/MasterMind/Views/Game/Partida.cshtml
+++ b/MasterMind/Views/Game/Partida.cshtml
@@ -25,9 +25,12 @@
 </div>
 
 <div id="divPergunta">
-    <div id="divtempo">
+    <div id="divtempo" style="text-align:center;">
         <h3>@ViewBag.TempoRestante</h3>
         <br />
+        <h2>@ViewBag.TemaAtual</h2>
+        <br />
+        
     </div>
 
     <div id="divPersonagem">
