--- a/MasterMind/Views/Jogos/Sala_Espera.cshtml
+++ b/MasterMind/Views/Jogos/Sala_Espera.cshtml
@@ -20,10 +20,10 @@
         <title></title>
         <meta http-equiv="refresh" content="5" />
         <link rel="shortcut icon" href="../favicon.ico">
-        <link href="../../Content/Site.css" rel="stylesheet" />
-        <link href="../../Styles/style1.css" rel="stylesheet" />
-        <link href="../../Styles/bootstrap-responsive.min.css" rel="stylesheet" />
-        <link href="../../Styles/bootstrap.min.css" rel="stylesheet" />
+        <link href="~/Content/Site.css" rel="stylesheet" />
+        <link href="~/Styles/style1.css" rel="stylesheet" />
+        <link href="~/Styles/bootstrap-responsive.min.css" rel="stylesheet" />
+        <link href="~/Styles/bootstrap.min.css" rel="stylesheet" />
         <link href="~/Styles/jogo.css" rel="stylesheet" />
         <link href="~/Styles/tabuleiro.css" rel="stylesheet" />
         <script src="@Url.Content("~/Scripts/jquery.jquery-1.5.1.min.js")" type="text/javascript"></script>
