--- a/MasterMind/Views/Shared/Principal.Master
+++ b/MasterMind/Views/Shared/Principal.Master
@@ -10,10 +10,10 @@
     <meta name="viewport" content="width=device-width,heigth=device-heigth" />
 
     <link rel="shortcut icon" href="../favicon.ico">
-    <link href="../../Content/Site.css" rel="stylesheet" />
-    <link href="../../Styles/style1.css" rel="stylesheet" />
-    <link href="../../Styles/bootstrap-responsive.min.css" rel="stylesheet" />
-    <link href="../../Styles/bootstrap.min.css" rel="stylesheet" />
+    <link href="~/Content/Site.css" rel="stylesheet" />
+    <link href="~/Styles/style1.css" rel="stylesheet" />
+    <link href="~/Styles/bootstrap-responsive.min.css" rel="stylesheet" />
+    <link href="~/Styles/bootstrap.min.css" rel="stylesheet" />
 
     <%: Styles.Render("~/Content/css") %>
     <%: Scripts.Render("~/bundles/modernizr") %>
