--- a/MasterMind/Views/Game/Partida.cshtml
+++ b/MasterMind/Views/Game/Partida.cshtml
@@ -47,7 +47,8 @@
     <div id="divGame-Over">
         <p>Game Over</p>
         <div style="text-align:center">
-          <br />  <input type="button" value="Sair" class="btn btn-info" onclick="window.location.href='@Url.Action("List", "Salas")'" />
+          <br />  
+            <input type="button" class="btn btn-info" value="Continuar" onclick="window.location.href='@Url.Action("Passagem_Nivel", "Jogos")    '" /> 
         </div>
     </div>
 
